# set_game

./: .gitignore  README.md  Set Game.py  card.py  game.py  lesson_class.py  main.py  pyproject.toml  selection.py  server_infos  set.css  set.html  set.js  set.py  set_game_class  set_game_class.py  test_mon_code.py  tests.py
back/: api.py  card.py  game.py  main.py  selection.py  set.py
front/: index.html  set.css  set.html  set.js
